--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,14 +35,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
-        cache: 'pnpm'
+        node-version: '24'
 
     - name: Install pnpm
       uses: pnpm/action-setup@v2
       with:
-        version: 8
-        run_install: false
+        version: 9
+        run_install: true
 
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
