--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
       uses: pnpm/action-setup@v2
       with:
         version: 9
-        run_install: true
+        run_install: false
 
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
