--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,13 +51,13 @@ jobs:
       run: pnpm install --frozen-lockfile
 
     - name: Run tests with coverage
-      run: pnpm turbo test:coverage
+      run: pnpm run test:workspace:coverage
       continue-on-error: false
 
     - name: Generate coverage report
       run: |
         # Check if coverage file exists and extract coverage percentage
-        COVERAGE_FILE="apps/uplox/coverage/coverage-summary.json"
+        COVERAGE_FILE="coverage/coverage-summary.json"
         if [ -f "$COVERAGE_FILE" ]; then
           COVERAGE=$(cat "$COVERAGE_FILE" | jq -r '.total.lines.pct // 0')
           # Ensure COVERAGE is a valid number
