--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -117,7 +117,7 @@ jobs:
           
           # Add new badges at the top after the title
           if grep -q "^# " README.md; then
-            sed -i "/^# /a\n${{ env.COVERAGE_BADGE }} ${{ env.TEST_BADGE }}" README.md
+            sed -i "/^# /a${{ env.COVERAGE_BADGE }} ${{ env.TEST_BADGE }}" README.md
           else
             echo -e "${{ env.COVERAGE_BADGE }} ${{ env.TEST_BADGE }}\n$(cat README.md)" > README.md
           fi
@@ -193,6 +193,7 @@ jobs:
         image-ref: '${{ steps.build.outputs.scan-image }}:scan'
         format: 'sarif'
         output: 'trivy-results.sarif'
+        skip-files: '*.tar,*.zip,*.jar,*.war,*.gem,*.whl'
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
