--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -193,7 +193,7 @@ jobs:
         image-ref: '${{ steps.build.outputs.scan-image }}:scan'
         format: 'sarif'
         output: 'trivy-results.sarif'
-        skip-files: '*.tar,*.zip,*.jar,*.war,*.gem,*.whl'
+        skip-files: '*.tar,*.zip,*.jar,*.war,*.gem,*.whl,*.cvd'
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
