--- a/turbo.json
+++ b/turbo.json
@@ -19,6 +19,9 @@
     },
     "test:coverage": {
       "dependsOn": ["^test:coverage"]
+    },
+    "format": {
+      "dependsOn": ["^format"]
     }
   }
 }
