--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -16,6 +16,7 @@
         "blake3-wasm": "2",
         "crypto-hash": "^3.1.0",
         "hono": "^4.8.3",
+        "minio": "^8.0.5",
         "short-uuid": "^5.2.0",
         "winston": "^3.17.0",
         "zod": "^3.25.67"
