--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,10 @@ services:
       - DATABASE_URL=postgresql://postgres:password@db:5432/uplox
       - MINIO_ENDPOINT=storage
       - MINIO_PORT=9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_ACCESS_KEY=miniosuperadmin
+      - MINIO_SECRET_KEY=miniosuperadmin
+      - MINIO_BUCKET=uplox
+      - MINIO_REGION=us-east-1
     depends_on:
       - db
       - cache
@@ -48,9 +50,17 @@ services:
     volumes:
       - ./infra/storage:/data
     environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
+      - MINIO_ROOT_USER=miniosuperadmin
+      - MINIO_ROOT_PASSWORD=miniosuperadmin
+      - MINIO_BUCKET=uplox
+      - MINIO_REGION=us-east-1
     command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD-SHELL", "timeout 5s bash -c '</dev/tcp/localhost/9000' || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     networks:
       - uplox-network
 
