--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "uplox",
+    "name": "@uplox/uplox",
     "type": "module",
     "scripts": {
         "dev": "tsx watch src/index.ts",
