--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -1,33 +1,34 @@
 {
     "name": "@uplox/uplox",
-    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
     "scripts": {
+        "build": "tsc --outDir dist",
         "dev": "tsx watch src/index.ts",
-        "build": "tsc",
         "start": "node dist/index.js",
         "format": "prettier --write .",
         "test": "vitest",
-        "test:watch": "vitest watch",
         "test:coverage": "vitest run --coverage"
     },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@10.12.4",
     "dependencies": {
-        "@hono/node-server": "^1.14.4",
-        "blake3": "2",
-        "blake3-wasm": "2",
-        "crypto-hash": "^3.1.0",
-        "hono": "^4.8.3",
-        "minio": "^8.0.5",
-        "short-uuid": "^5.2.0",
-        "winston": "^3.17.0",
-        "zod": "^3.25.67"
+        "@hono/node-server": "^1.15.0",
+        "@uplox/prettier-config": "workspace:*",
+        "clamscan": "^2.4.0",
+        "file-type": "^21.0.0",
+        "hono": "^4.8.4",
+        "redis": "^5.5.6"
     },
     "devDependencies": {
-        "@types/node": "^20.11.17",
-        "@uplox/prettier-config": "workspace:*",
+        "@types/node": "^24.0.10",
         "@vitest/coverage-v8": "^3.2.4",
         "prettier": "^3.6.0",
-        "tsx": "^4.7.1",
-        "typescript": "^5.8.3",
+        "tsx": "^4.20.3",
+        "typescript": "5.8.2",
         "vitest": "^3.2.4"
     }
 }
