--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -340,6 +340,9 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global pull.rebase true
+        git config --global push.default current
+        git pull
         
         if git diff --quiet README.md; then
           echo "No changes to commit for security badge"
