--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -339,10 +339,8 @@ jobs:
       if: always()
       run: |
         git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git config --global pull.rebase true
-        git config --global push.default current
-        git pull
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'        
+        git pull --rebase
         
         if git diff --quiet README.md; then
           echo "No changes to commit for security badge"
