--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -26,6 +26,7 @@
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "@types/clamscan": "^2.4.1",
         "@types/node": "^24.0.10",
         "@vitest/coverage-v8": "^3.2.4",
         "prettier": "^3.6.0",
