--- a/apps/uplox/tsconfig.json
+++ b/apps/uplox/tsconfig.json
@@ -40,6 +40,10 @@
         "declarationMap": true,
         "sourceMap": true,
 
+        /* Experimental */
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+
         /* Path Mapping */
         "baseUrl": "./",
         "paths": {
