--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -21,7 +21,9 @@
         "clamscan": "^2.4.0",
         "file-type": "^21.0.0",
         "hono": "^4.8.4",
+        "inversify": "7.0.0-alpha.5",
         "redis": "^5.5.6",
+        "reflect-metadata": "^0.2.2",
         "short-uuid": "^5.2.0",
         "winston": "^3.17.0"
     },
