--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -22,6 +22,7 @@
         "file-type": "^21.0.0",
         "hono": "^4.8.4",
         "inversify": "7.0.0-alpha.5",
+        "minio": "^8.0.5",
         "redis": "^5.5.6",
         "reflect-metadata": "^0.2.2",
         "short-uuid": "^5.2.0",
