--- a/apps/uplox/package.json
+++ b/apps/uplox/package.json
@@ -23,6 +23,7 @@
         "hono": "^4.8.4",
         "inversify": "7.0.0-alpha.5",
         "minio": "^8.0.5",
+        "prom-client": "^15.1.3",
         "redis": "^5.5.6",
         "reflect-metadata": "^0.2.2",
         "short-uuid": "^5.2.0",
